Small HTML update.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta description="My second HTML & CSS only website.">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>JS TASK1</title>
+    <title>ToDoList</title>
 </head>
 
 <body>
